--- a/FarmaciaDyM/Pages/Venta/AddEditVenta.razor
+++ b/FarmaciaDyM/Pages/Venta/AddEditVenta.razor
@@ -1,6 +1,6 @@
 @page "/venta/crear"
 
-<h3>Alquiler</h3>
+<h3>Farmacia</h3>
 <EditForm Model="request" OnValidSubmit="Send">
     
     @if (Message != null)
