--- a/FarmaciaDyM/Pages/Venta/AddEditVenta.razor
+++ b/FarmaciaDyM/Pages/Venta/AddEditVenta.razor
@@ -9,7 +9,7 @@
             <span class="text-danger">@Message</span>
         </div>
     }
-    @*Disenar el espacio para el cliente o contacto a facturarle*@
+    @*Disenar el espacio para el cliente  a facturarle*@
     <div class="input-group mb-3">
         <input 
                class="form-control"
