--- a/FarmaciaDyM/Pages/Venta/Index.razor
+++ b/FarmaciaDyM/Pages/Venta/Index.razor
@@ -14,7 +14,7 @@
         </button>
     </div>
 </div>
-@if (Alquileres != null)
+@if (Producto, != null)
 {
     <table class="table">
         <thead>
@@ -26,7 +26,7 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var f in Alquileres)
+            @foreach (var f in Producto)
             {
                 <tr>
                     <th scope="row">@f.Id</th>
@@ -44,7 +44,7 @@
         var resultado = await ventaServices.Consultar();
         if (resultado.Success)
         {
-            Alquileres = resultado.Data??new List<VentaResponse>();
+            Producto = resultado.Data??new List<VentaResponse>();
         }
         StateHasChanged();
     }
